--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.2",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
     "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.9.6",
-    "babel-plugin-emotion": "^10.0.21",
+    "apollo-server": "^2.10.0",
+    "babel-plugin-emotion": "^10.0.27",
     "flexboxgrid": "^6.3.1",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "json5": "^2.1.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "json5": "^2.1.1",
     "lowdb": "^1.0.0",
-    "nanoid": "^2.1.1",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "nanoid": "^2.1.11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
-    "react-spinners": "^0.6.1"
+    "react-spinners": "^0.8.0"
   },
   "scripts": {
     "server": "node api/src/server.js",
@@ -47,7 +47,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "jest": "^24.9.0",
-    "parcel": "^1.12.3"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
+    "jest": "^25.1.0",
+    "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.4"
   }
 }
